# ompi-project

./: .gitignore  .gitmodules  .mailmap  Initialize.txt  README.md  VERSION  datasize  notes.txt  sql-statements.txt
.github/workflows/: compile-rocm.yaml
Visualisation-Part/.metadata/: version.ini
Visualisation-Part/Edu_MPI_GUI/: pom.xml
Visualisation-Part/GUI_Cluster/: CMakeLists.txt  Cores2D.qml  Sidebar.qml  cluster_node.cpp  cluster_node.h  main.cpp  main.qml  mongodata.cpp
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_5_15_12_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  GUI_Cluster  build.ninja  cmake_install.cmake
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_5_15_12_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_5_15_12_GCC_64bit-Debug/GUI_Cluster_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_4_3_GCC_64bit-Debug/: .ninja_log  CMakeCache.txt.prev  Cores3D.qrc.depends  build.ninja  cmake_install.cmake
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_4_3_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_4_3_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_GUI_Cluster.cmake  Qt6_QmlPlugins_Imports_GUI_Cluster.rsp
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_4_3_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_4_3_GCC_64bit-Debug/.rcc/: qmake_GUI_Cluster.qrc
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_4_3_GCC_64bit-Debug/GUI_Cluster/: Cores2D.qml  Cores3D.qml  qmldir
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_4_3_GCC_64bit-Debug/GUI_Cluster_autogen/: deps  moc_predefs.h
Visualisation-Part/build-GUI_Cluster-Desktop_Qt_6_5_0_GCC_64bit-Debug/: CMakeCache.txt.prev  Cores3D.qrc.depends  cmake_install.cmake
Visualisation-Part/mysqlconnection/: mysqlconnection.pde
docs/: Makefile.am  mca.rst
docs/installing-open-mpi/: packagers.rst  required-support-libraries.rst
docs/man-openmpi/man1/: mpirun.1.rst
ompi/: Makefile.am
ompi/communicator/: comm.c  comm_cid.c  communicator.h
ompi/communicator/ft/: comm_ft.c  (+2 more)
ompi/datatype/: ompi_datatype_sndrcv.c
ompi/debuggers/: ompi_msgq_dll.c  predefined_gap_test.c
ompi/dpm/: dpm.c
ompi/errhandler/: errcode.c  errhandler.h  errhandler_invoke.c
ompi/group/: group_init.c
ompi/include/: mpi.h.in
ompi/mca/: mca.h
ompi/message/: message.c  message.h
ompi/peruse/: peruse.c
ompi/request/: req_test.c  req_wait.c  request.c  request.h
ompi/runtime/: ompi_mpi_finalize.c  ompi_mpi_preconnect.c
ompi/win/: win.c  win.h
opal/class/: opal_free_list.c  opal_free_list.h
test/asm/: atomic_cmpset.c  atomic_math.c
test/class/: opal_bitmap.c
test/datatype/: ddt_pack.c  ddt_raw.c  external32.c  partial.c  position.c  position_noncontig.c  reduce_local.c  unpack_ooo.c
test/simple/: add_host.c  crisscross.c  initial_errh.c
test/util/: opal_argv.c
(+1260 files in other folders)
